--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -4,46 +4,44 @@
 <head>
 </head>
 <body>
-<th:block th:fragment="allegati(wrapper, withIdEditabili, tipoAllegato, counter, note, withFirma)">
+<th:block th:fragment="allegati(wrapper, withIdEditabili, tipoAllegato, counter, note, withFirma, editabile)">
 
 	<!-- wrapper con idEditabili -->
 	<th:block th:if="${__withIdEditabili__}">
-		<th:block th:if="${!__${wrapper}__.__${tipoAllegato}__.new} or
-			${#lists.contains(__${wrapper}__.idEditabili, counter)}">
-			<div class="item form-group" th:classappend="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')} ? 'bad'">
 
-				<input type="hidden" th:field="${__${wrapper}__.__${tipoAllegato}__.id}" />
-				<input type="hidden" th:field="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" />
+		<div class="item form-group" th:classappend="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')} ? 'bad'">
 
-				<label class="control-label col-xs-1" th:text="${counter}">numero indice</label>
-				<label class="control-label col-md-3 col-sm-3 col-xs-7" th:for="__${tipoAllegato}__">
-					<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span><span th:if="${note == null}" class="required">*</span>
-					<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
-				</label>
-				<th:block th:if="${#lists.contains(__${wrapper}__.idEditabili, counter) or counter == null}">
-					<div class="col-md-4 col-sm-4 col-xs-12">
-						<div class="form-control col-md-7 col-xs-12 btn">
-							<input type="file" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
-								style="display: none;" />
-							<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
-							<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
-							<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:if="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="#{label.nessun_file_selezionato}" class="allegato-label"></a></div>
-						</div>
+			<input type="hidden" th:field="${__${wrapper}__.__${tipoAllegato}__.id}" />
+			<input type="hidden" th:field="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" />
+
+			<label class="control-label col-xs-1" th:text="${counter}">numero indice</label>
+			<label class="control-label col-md-3 col-sm-3 col-xs-7" th:for="__${tipoAllegato}__">
+				<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span><span th:if="${note == null}" class="required">*</span>
+				<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
+			</label>
+			<th:block th:if="${#lists.contains(__${wrapper}__.idEditabili, counter)}">
+				<div class="col-md-4 col-sm-4 col-xs-12">
+					<div class="form-control col-md-7 col-xs-12 btn">
+						<input type="file" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
+							style="display: none;" />
+						<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
+						<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
+						<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:if="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="#{label.nessun_file_selezionato}" class="allegato-label"></a></div>
 					</div>
-					<!-- pulsante per aggiungere firma -->
-					<th:block th:if="${withFirma}">
-						<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
-					</th:block>
+				</div>
+				<!-- pulsante per aggiungere firma -->
+				<th:block th:if="${withFirma}">
+					<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
 				</th:block>
-				<th:block th:unless="${#lists.contains(__${wrapper}__.idEditabili, counter) or counter == null}">
-					<div class="col-md-4 col-sm-4 col-xs-12">
-						<div class="allegato-label"><a th:id="__${tipoAllegato}___disabled" class="form-control form-disabled-text clickable left-align col-md-7 col-xs-12"
-							th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
-					</div>
-				</th:block>
-				<div th:if="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')}" class="alert" th:errors="${__${wrapper}__.__${tipoAllegato}__}"></div>
-			</div>
-		</th:block>
+			</th:block>
+			<th:block th:if="${(!#lists.contains(__${wrapper}__.idEditabili, counter)) or counter == null}">
+				<div class="col-md-4 col-sm-4 col-xs-12">
+					<div class="allegato-label"><a th:id="__${tipoAllegato}___disabled" class="form-control form-disabled-text clickable left-align col-md-7 col-xs-12"
+						th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
+				</div>
+			</th:block>
+			<div th:if="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')}" class="alert" th:errors="${__${wrapper}__.__${tipoAllegato}__}"></div>
+		</div>
 	</th:block>
 
 	<!-- wrapper senza idEditabili -->
