--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -185,7 +185,7 @@
 				"ordering" : false,
 			});
 
-			$('.datatable-responsive-check').DataTable({
+			$('.datatable-responsive-provider-edit').DataTable({
 				"bFilter" : false,
 				"bInfo" : false,
 				"bPaginate" : false,
@@ -197,7 +197,51 @@
 				} ],
 			});
 
-			$('.datatable-responsive-componenti-comitato').DataTable({
+			$('.datatable-responsive-provider-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+			});
+
+			$('.datatable-responsive-responsabili-edit').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+				"columnDefs": [ {
+					"targets": 1,
+					"width": "1px",
+					"sClass": "center"
+				} ],
+			});
+
+			$('.datatable-responsive-responsabili-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+			});
+
+			$('.datatable-responsive-datiAccreditamento-edit').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+				"columnDefs": [ {
+					"targets": 1,
+					"width": "1px",
+					"sClass": "center"
+				} ],
+			});
+			$('.datatable-responsive-datiAccreditamento-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false
+			});
+
+			$('.datatable-responsive-componentiComitato-edit').DataTable({
 				"bFilter" : false,
 				"bInfo" : false,
 				"bPaginate" : false,
@@ -209,7 +253,14 @@
 				} ],
 			});
 
-			$('.datatable-responsive-piano-formativo').DataTable({
+			$('.datatable-responsive-componentiComitato-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+			});
+
+			$('.datatable-responsive-allegati-edit').DataTable({
 				"bFilter" : false,
 				"bInfo" : false,
 				"bPaginate" : false,
@@ -219,6 +270,32 @@
 					"width": "1px",
 					"sClass": "center"
 				} ],
+			});
+
+			$('.datatable-responsive-allegati-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+			});
+
+			$('.datatable-responsive-pianoFormativo-edit').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
+				"columnDefs": [ {
+					"targets": 1,
+					"width": "1px",
+					"sClass": "center"
+				} ],
+			});
+
+			$('.datatable-responsive-pianoFormativo-show').DataTable({
+				"bFilter" : false,
+				"bInfo" : false,
+				"bPaginate" : false,
+				"ordering" : false,
 			});
 
 			$('.datatable-responsive-ordering').DataTable({
