--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -49,7 +49,7 @@
 
 						<!-- COGNOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">1</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">1</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="cognome_persona"><span th:text="#{label.cognome}">Cognome</span> <span	class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -71,7 +71,7 @@
 
 						<!-- nome -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.nome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">2</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">2</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="cognome_persona"><span th:text="#{label.nome}">Nome</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -92,7 +92,7 @@
 
 						<!-- codice fiscale -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">3</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">3</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="codiceFiscale_persona"><span th:text="#{label.codice_fiscale}">Codice Fiscale</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -137,7 +137,7 @@
 
 						<!-- telefono -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.telefono')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">4</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">4</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="telefono_persona"><span th:text="#{label.telefono}">Telefono</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -162,7 +162,7 @@
 										${personaWrapper.persona.responsabileSistemaInformatico} or
 										${personaWrapper.persona.responsabileQualita}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cellulare')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">5</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">5</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="cellulare_persona"><span th:text="#{label.cellulare}">Cellulare</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -183,7 +183,7 @@
 
 						<!-- email -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.email')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">6</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">6</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="email_persona"><span th:text="#{label.email}">Email</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -206,7 +206,7 @@
 						<div th:if="${personaWrapper.persona.legaleRappresentante} or
 									${personaWrapper.persona.delegatoLegaleRappresentante}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.pec')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">7</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">7</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="pec_persona"><span th:text="#{label.posta_elettronica_certificata}">Posta elettronica certificata (PEC)</span> <span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -231,7 +231,7 @@
 									${personaWrapper.persona.responsabileSistemaInformatico} or
 									${personaWrapper.persona.responsabileQualita}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.professione')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${++counter}">8</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">8</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="professione_persona"><span th:text="#{label.professione}">Professione</span><span class="required">*</span></label>
 							<th:block th:if="${editabile and #lists.contains(personaWrapper.idEditabili, counter)}">
@@ -254,19 +254,19 @@
 						<!-- allegato 1 (atto di nomina) -->
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${++counter}, null, true, ${editabile})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? ++counter : null}, null, true, ${editabile})" ></th:block>
 						</div>
 
 						<!-- allegato 2 (curriculum vitae) -->
 						<div th:unless="${personaWrapper.persona.legaleRappresentante}">
 							<div class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${++counter}, null, true, ${editabile})"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
 						</div>
 
 						<!-- allegato 3 (delega) -->
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${++counter}, null, true, ${editabile})"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
 						</div>
 					</form>
 				</div>
