modifica css tabs WIP

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -12,22 +12,22 @@
 		<div class="x_content">
 			<div id="tabs" class="" role="tabpanel" data-example-id="togglable-tabs">
 				<ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-					<li role="presentation" class="active">
+					<li role="presentation" class="active presentation">
 						<a href="#tab_content1" role="tab" id="tab1" data-toggle="tab" aria-expanded="true" th:text="#{label.dati_del_organizzatore}">
 							Dati dell'organizzatore
 						</a>
 					</li>
-					<li role="presentation" class="">
+					<li role="presentation" class="presentation">
 						<a href="#tab_content2" role="tab" id="tab2" data-toggle="tab" aria-expanded="false" th:text="#{label.dati_dei_responsabili}">
 							Dati dei responsabili
 						</a>
 					</li>
-					<li role="presentation" class="">
+					<li role="presentation" class="presentation">
 						<a href="#tab_content3" role="tab" id="tab3" data-toggle="tab" aria-expanded="false" th:text="#{label.allegati}">
 							Allegati
 						</a>
 					</li>
-					<li role="presentation" class="">
+					<li role="presentation" class="presentation">
 						<a href="#tab_content4" role="tab" id="tab4" data-toggle="tab" aria-expanded="false" th:text="#{label.piano_formativo}">
 							Allegati
 						</a>
