--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,92 +1,134 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head lang="it">
-        <title th:text="#{app.title}">TITLE</title>
-        <!--/*/ <th:block th:include="fragments/header :: head"></th:block> /*/-->
-	</head>
+<head lang="it">
+<title th:text="#{app.title}">TITLE</title>
+<!--/*/ <th:block th:include="fragments/header :: head"></th:block> /*/-->
+</head>
 
-	<body style="background:#F7F7F7;">
+<body style="background: #F7F7F7;">
 
-	  <div class="col-xs-12">
-	    <a class="hiddenanchor" id="tologin"></a>
-	    <a class="hiddenanchor" id="toreset"></a>
-	
-	    <div id="wrapper">
-	      <div id="login" class="animate form">
-	        <section class="login_content">
-	        <h1 class="title" th:text="' ' + #{app.title}"></h1>
-	        
-	        	<img class="login-img" th:src="@{/images/logo_ecm.jpg}"/>
-	        
-	          <form th:action="@{/login}" method="post">
-	            <div th:if="${param.error}" th:text="#{label.errore_login}" class="alert alert-error"></div>   
-	            <div th:if="${param.error}" th:text="${error}" class="alert alert-error"></div>    
-                <div>
-	              <input type="text" class="form-control" id="username" name="username" placeholder="Username" required="required" />
-	            </div>
-	            <div>
-	              <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="required" />
-	            </div>
-	            <div class="col-2">
-	              <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-	              <div class="input-group">
-	              	<div class="checkbox">
-	                  <label class="remember-login-label">
-    	                  <input class="flat" type="checkbox" name="remember-me" id="remember-me"/> <span th:text="#{label.ricordami}">label.ricordami</span>
-        	          </label>
-                  	</div>
-                  </div>
-                   <input class="btn btn-default btn-block submit" type="submit" value="label.accedi" th:value="#{label.accedi}" />
-	            </div>
-	            <div class="clearfix"></div>
-	            <div class="separator">
-             		<p class="change_link row">
-             			<a th:href="@{/providerRegistration}" class="to_register col-xs-5" th:text="#{label.registrati}">label.registrati</a>
-                		<a href="#toreset" class="reset_pass col-xs-5" th:text="#{label.password_dimenticata}">label.password_dimenticata?</a>
-              		</p>
-	              <div class="clearfix"></div>
-	              <br />
-	              <div>
-	                <p th:text="#{label.diritti_riservati}">label.diritti_riservati</p>
-	              </div>
-	            </div>
-	          </form>
-	          <!-- form -->
-	        </section>
-	        <!-- content -->
-	      </div>
-	      <div id="reset" class="animate form">
-	        <section class="login_content">
-	          <form th:action="@{/user/resetPassword}" method="post">
-	            <h1 th:text="#{label.recupera_password}">login.recupera_password</h1>
-	            <div th:text="#{label.reset_message}" class="alert alert-info"></div>   
-				<div class="item form-group">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <input type="email" id="reset_email" name="reset_email" class="form-control col-md-10 col-xs-12"
-								placeholder="email@domain.com" required="required"/>
-                    </div>
-                </div>	           
-	            <div>
-	              <input class="btn btn-default btn-block submit" type="submit" value="label.invia" th:value="#{label.invia}" />
-	            </div>
-	            <div class="clearfix"></div>
-	            <div class="separator">
-	              <p class="change_link">
-	                <a href="#tologin" class="to_login" th:text="#{label.accedi}"> label.accedi </a>
-	              </p>
-	              <div class="clearfix"></div>
-	              <br />
-	              <div>
-	                <p th:text="#{label.diritti_riservati}">label.diritti_riservati</p>
-	              </div>
-	            </div>
-	          </form>
-	          <!-- form -->
-	        </section>
-	        <!-- content -->
-	      </div>
-	    </div>
-	  </div>
-	  <!--/*/ <th:block th:include="fragments/footer :: footer"></th:block> /*/-->
-	</body>
+	<div class="col-xs-12">
+		<a class="hiddenanchor" id="tologin"></a> <a class="hiddenanchor"
+			id="toreset"></a>
+
+		<div id="wrapper">
+			<div id="login" class="animate form">
+				<section class="login_content">
+					<h1 class="title" th:text="' ' + #{app.title}"></h1>
+
+					<img class="login-img" th:src="@{/images/logo_ecm.jpg}" />
+
+					<form th:action="@{/login}" method="post">
+						<div th:if="${param.error}" th:text="#{label.errore_login}"
+							class="alert alert-error"></div>
+						<div th:if="${param.error}" th:text="${error}"
+							class="alert alert-error"></div>
+						<div>
+							<input type="text" class="form-control" id="username"
+								name="username" placeholder="Username" required="required" />
+						</div>
+						<div>
+							<input type="password" class="form-control" id="password"
+								name="password" placeholder="Password" required="required" />
+						</div>
+						<div class="col-2">
+							<input type="hidden" name="${_csrf.parameterName}"
+								value="${_csrf.token}" />
+							<div class="input-group">
+								<div class="checkbox">
+									<label class="remember-login-label"> <input
+										class="flat" type="checkbox" name="remember-me"
+										id="remember-me" /> <span th:text="#{label.ricordami}">label.ricordami</span>
+									</label>
+								</div>
+							</div>
+							<input class="btn btn-default btn-block submit" type="submit"
+								value="label.accedi" th:value="#{label.accedi}" />
+						</div>
+						<div class="clearfix"></div>
+						<div class="separator">
+							<p class="change_link row">
+								<a th:href="@{/providerRegistration}"
+									class="to_register col-xs-5" th:text="#{label.registrati}">label.registrati</a>
+								<a href="#toreset" class="reset_pass col-xs-5"
+									th:text="#{label.password_dimenticata}">label.password_dimenticata?</a>
+							</p>
+							<div class="clearfix"></div>
+							<br />
+							<div>
+								<p th:text="#{label.diritti_riservati}">label.diritti_riservati</p>
+							</div>
+						</div>
+					</form>
+					<!-- form -->
+				</section>
+				<!-- content -->
+			</div>
+			<div id="reset" class="animate form">
+				<section class="login_content">
+					<form th:action="@{/user/resetPassword}" method="post">
+						<h1 th:text="#{label.recupera_password}">login.recupera_password</h1>
+						<div th:text="#{label.reset_message}" class="alert alert-info"></div>
+						<div class="item form-group">
+							<div class="col-md-12 col-sm-12 col-xs-12">
+								<input type="email" id="reset_email" name="reset_email"
+									class="form-control col-md-10 col-xs-12"
+									placeholder="email@domain.com" required="required" />
+							</div>
+						</div>
+						<div>
+							<input class="btn btn-default btn-block submit" type="submit"
+								value="label.invia" th:value="#{label.invia}" />
+						</div>
+						<div class="clearfix"></div>
+						<div class="separator">
+							<p class="change_link">
+								<a href="#tologin" class="to_login" th:text="#{label.accedi}">
+									label.accedi </a>
+							</p>
+							<div class="clearfix"></div>
+							<br />
+							<div>
+								<p th:text="#{label.diritti_riservati}">label.diritti_riservati</p>
+							</div>
+						</div>
+					</form>
+					<!-- form -->
+				</section>
+				<!-- content -->
+			</div>
+		</div>
+	</div>
+	<script th:inline="javascript">
+
+		if([[${message}]]){
+	      	sendNotify();
+		}
+
+		function sendNotify(){
+				var notify = new PNotify({
+					title: [[${message} == null ? '' : #{${message?.titolo}}]],
+					text:  [[${message} == null ? '' : #{__${message?.testo}__}]],
+					type: [[${message?.tipo}]],
+					hide: false,
+	              buttons: {
+	              	sticker: false
+	              }
+	      	});
+		};
+
+			function sendNotifyStatic(titolo, testo, tipo){
+				var notify = new PNotify({
+					title: titolo,
+					text:  testo,
+					type: tipo,
+					hide: false,
+	              buttons: {
+	              	sticker: false
+	              }
+	      	});
+		};
+	  </script>
+	<!--/*/ <th:block th:include="fragments/footer :: footer"></th:block> /*/-->
+</body>
 </html>
